# LimeStudio

./: .gitignore  Cargo.toml  DESIGN.md  DEVELOPMENT_LOG.md  README.md  TECHNICAL_GUIDE.md  lime-lint.toml  run.bat  run.sh
basic_gain/: Cargo.toml
basic_gain/src/: lib.rs
basic_thru/: Cargo.toml
basic_thru/src/: editor.rs  lib.rs  spectrogram.rs
docs/en/: ADVANCED_INTERNALS.md  DESIGN.md  DEVELOPMENT_LOG.md  HIG.md  MENTAL_MODELS.md  PrimitivePolicy.md  README.md  SCRIPTING.md  TECHNICAL_GUIDE.md  TUTORIAL.md  UI_TUTORIAL.md
docs/jp/: ADVANCED_INTERNALS.md  AuthorityGlassPolicy.md  BEGINNERS_GUIDE.md  DESIGN.md  HIG.md  MENTAL_MODELS.md  PrimitivePolicy.md  README.md  SCRIPTING.md  TECHNICAL_GUIDE.md  TUTORIAL.md  TemporalLaw.md  UI_TUTORIAL.md
limestudio_cli/: Cargo.toml
limestudio_cli/src/: color.rs  main.rs  monitor.rs
limestudio_core/: Cargo.toml  stdlib_graph.json  test_graph.json
limestudio_core/benches/: engine_bench.rs
limestudio_core/src/: causality.rs  codegen.rs  codegen.rs.new  compile.rs  confidence.rs  diff.rs  engine.rs  engine.rs.tmp  engine_tests.rs  golden.rs  graph.rs  hostile.rs  ir.rs  lib.rs  live.rs  math.rs  node_discovery.rs  param_graph.rs  param_spec.rs  pipeline.rs  polyphony.rs  preset.rs  project.rs  provenance.rs  reality_bridge_validation.rs  registry.rs  scripting.rs  signal.rs  stdlib.rs  telemetry.rs  time.rs  topology.rs  torture.rs  transaction.rs  undo.rs  validate.rs  view.rs
limestudio_core/src/builder/: apple_connect.rs  mod.rs  orchestrator.rs  receipt.rs
limestudio_core/src/forensics/: causality.rs
limestudio_core/src/modulation/: mod.rs
limestudio_core/src/parameter/: mod.rs
limestudio_core/src/sandbox/: mod.rs
limestudio_core/src/view/: layout.rs  mod.rs
limestudio_core/tests/: polyphony_test.rs  snapshot_tests.rs
limestudio_core/tests/snapshots/: basic_gain.txt  pan_split.txt
limestudio_dsp/: Cargo.toml
limestudio_dsp/src/: convolution.rs  gatherer.rs  lib.rs  monitor.rs  processor.rs  utils.rs  wavelets.rs  wrapper.rs
limestudio_graph/: Cargo.toml
limestudio_graph/src/: lib.rs
limestudio_lint/: Cargo.toml
limestudio_lint/src/: main.rs  visitor.rs
limestudio_macro/: Cargo.toml
limestudio_macro/src/: lib.rs
limestudio_mirror/: Cargo.toml
limestudio_mirror/src/: main.rs
limestudio_plugin/: Cargo.toml
limestudio_plugin/src/: core.rs  crash.rs  dsl.rs  editor.rs  interaction.rs  lib.rs  observation.rs  safety.rs
limestudio_surface/: Cargo.toml
limestudio_surface/src/: color.rs  input.rs  lib.rs  main_verify.rs  motion.rs  profiler.rs  runtime.rs  scene.rs  ui_ir.rs
limestudio_surface/src/adapter/: mod.rs
limestudio_surface/src/authority/: causal_replay.rs  lineage_timeline.rs  mod.rs  signal_overlay.rs  time_travel.rs  visible_compiler.rs
limestudio_surface/src/host_attach/: mod.rs  standalone.rs  vst3_attach.rs
limestudio_surface/src/model/: bounds.rs  geometry.rs  hit_test.rs  mod.rs  provenance.rs  stable_id.rs  theme.rs
limestudio_surface/src/render/: cable.wgsl  cable_renderer.rs  mod.rs  node.wgsl  node_renderer.rs  sdf.rs  sdf.wgsl  text.rs  text_layout.rs  text_renderer.rs  vello_renderer.rs  waveform.wgsl  waveform_renderer.rs
limestudio_surface/src/runtime/: hit_test_refinement.rs  input.rs  instance_buffer.rs  interaction_kernel.rs  mod.rs  reconciliation.rs  signal.rs  sync_ui.rs
limestudio_surface/src/scene/: camera.rs  flat_scene.rs  mod.rs
limestudio_surface/src/widgets/: analyzer.rs  authority_drawer.rs  badge.rs  button.rs  cable.rs  canvas.rs  confidence.rs  custom.rs  dropdown.rs  envelope.rs  inspector.rs  knob.rs  label.rs  lens.rs  list_view.rs  mod.rs  number_box.rs  pd_compat.rs  slider.rs  text_input.rs  toggle.rs  trait_def.rs  ui.rs
limestudio_vpl/: Cargo.toml
limestudio_vpl/src/: designer.rs  engine.rs  lib.rs  main.rs  main_legacy.rs  ritual.rs  style.rs  widgets.rs
limestudio_vpl/src/canvas/: interaction.rs  mod.rs  renderer.rs
limestudio_vpl/src/overlay/: lens.rs  lineage.rs  mod.rs
poly_sine/: Cargo.toml
poly_sine/src/: lib.rs
squeezer/: Cargo.toml
squeezer/src/: main.rs
squeezer/src/designer/: mod.rs
templates/dangerous-fx-lab/: Cargo.toml
templates/dangerous-fx-lab/src/: main.rs
templates/limestudio-synth/: Cargo.toml
templates/limestudio-synth/src/: main.rs
templates/mix-doctor/: Cargo.toml
templates/mix-doctor/src/: main.rs
templates/starter-synth/: Cargo.toml
templates/starter-synth/src/: lib.rs
