[package]
name = "limestudio_core"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
uuid.workspace = true
dirtydata-core = { path = "../DirtyData/crates/dirtydata-core" }
dirtydata-runtime = { path = "../DirtyData/crates/dirtydata-runtime" }
limestudio_graph = { path = "../limestudio_graph" }
tracing.workspace = true
rtrb.workspace = true
anyhow.workspace = true
blake3.workspace = true
toml.workspace = true
parking_lot.workspace = true
