[package]
name = "limestudio_graph"
version = "0.1.0"
edition = "2021"
description = "The Unified Single Source of Truth for LimeStudio and DirtyData"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirtydata-core = { path = "../DirtyData/crates/dirtydata-core" }
glam = "0.24"
uuid = { version = "1.0", features = ["v4", "serde"] }
