[package]
name = "limestudio_lint"
version = "0.1.0"
edition = "2021"
description = "LimeLint: The Trust Compiler for Lime Studio"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
walkdir = "2.3"
toml = "0.7"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "cargo-lime-lint"
path = "src/main.rs"
