[package]
name = "limestudio_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug.workspace = true
limestudio_core = { workspace = true }
limestudio_macro = { path = "../limestudio_macro" }
limestudio_surface = { workspace = true }
dirtydata-core = { workspace = true }
dirtydata-runtime = { workspace = true }
dirtydata-observer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
taffy = { workspace = true }
rtrb = { workspace = true }
ulid = { workspace = true }
wgpu = { workspace = true }
raw-window-handle = "0.6"
pollster = { workspace = true }
once_cell = { workspace = true }
