[package]
name = "limestudio_surface"
version = "0.1.0"
edition = "2021"

[dependencies]
limestudio_core = { path = "../limestudio_core" }
wgpu = "0.19"
winit = "0.29"
raw-window-handle = "0.6"
glyphon = "0.5"
bytemuck = { version = "1.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
glam = "0.24" # Fast linear algebra
log = "0.4"
anyhow = "1.0"

[dev-dependencies]

