[package]
name = "limestudio_surface"
version.workspace = true
edition.workspace = true
[lib]
path = "src/lib.rs"

[[bin]]
name = "surface-verify"
path = "src/main_verify.rs"

[dependencies]
limestudio_core = { path = "../limestudio_core" }
dirtydata-core = { path = "../DirtyData/crates/dirtydata-core" }
dirtydata-runtime = { path = "../DirtyData/crates/dirtydata-runtime" }
wgpu.workspace = true
winit.workspace = true
raw-window-handle = "0.6"
glyphon.workspace = true
bytemuck.workspace = true
serde.workspace = true
glam.workspace = true
log.workspace = true
taffy.workspace = true
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
pollster = { workspace = true }
rtrb = "0.3"
anyhow.workspace = true
ulid.workspace = true
blake3 = "1.5"
dirtydata-dsp-fft = { path = "../DirtyData/crates/dirtydata-dsp-fft" }
rustfft = "6.1"


